@@ -193,35 +193,21 @@ int wpgsql_mod_user(const char *name, wzd_user_t * user, unsigned long mod_type)
   /* XXX FIXME find a free uid !! */
   user->uid = 154;
 
-#ifndef WIN32
-  if (_wzd_run_update_query(query, 2048, "INSERT INTO users (username,userpass,rootpath,uid,flags,max_idle_time,max_ul_speed,max_dl_speed,num_logins,ratio,user_slots,leech_slots,perms,credits) VALUES ('%s',MD5('%s'),'%s',%u,'%s',%u,%lu,%lu,%u,%u,%u,%u,0x%lx,%llu)",
+  if (_wzd_run_update_query(query, 2048, "INSERT INTO users (username,userpass,rootpath,uid,flags,max_idle_time,max_ul_speed,max_dl_speed,num_logins,ratio,user_slots,leech_slots,perms,credits) VALUES ('%s',MD5('%s'),'%s',nextval('users_uid_seq'),'%s',%u,%lu,%lu,%u,%u,%u,%u,CAST (X'%lx' as integer),% " PRIu64 ")",
       user->username, user->userpass,
       user->rootpath,
-      user->uid,
       user->flags,
       (unsigned int)user->max_idle_time, user->max_ul_speed, user->max_dl_speed,
       user->num_logins, user->ratio, user->user_slots, user->leech_slots,
       user->userperms, user->credits
       ))
     goto error_user_add;
-#else
-  if (_wzd_run_update_query(query, 2048, "INSERT INTO users (username,userpass,rootpath,uid,flags,max_idle_time,max_ul_speed,max_dl_speed,num_logins,ratio,user_slots,leech_slots,perms,credits) VALUES ('%s',MD5('%s'),'%s',%u,'%s',%u,%lu,%lu,%u,%u,%u,%u,0x%lx,%I64u)",
-      user->username, user->userpass,
-      user->rootpath,
-      user->uid,
-      user->flags,
-      (unsigned int)user->max_idle_time, user->max_ul_speed, user->max_dl_speed,
-      user->num_logins, user->ratio, user->user_slots, user->leech_slots,
-      user->userperms, user->credits
-      ))
-    goto error_user_add;
-#endif
 
   ref = user_get_ref(user->username,0);
   if (!ref) goto error_user_add;
 
-  /* Part 2, UGR */
-  /* INSERT into UGR (uref,gref) SELECT users.ref,groups.ref FROM users,groups WHERE users.uid=154 AND groups.gid=1; */
+  /* Part 2, ugr */
+  /* INSERT into ugr (uref,gref) SELECT users.ref,groups.ref FROM users,groups WHERE users.uid=154 AND groups.gid=1; */
   for ( i=0; i<user->group_num; i++ )
     if (_wzd_run_update_query(query, 2048, "INSERT INTO ugr (uref,gref) SELECT users.ref,groups.ref FROM users,groups WHERE users.ref=%u AND groups.gid=%u",
           ref, user->groups[i]))
@@ -248,9 +234,9 @@ error_user_add:
   /* we don't care about the results of the queries */
   ref = user_get_ref(user->username,0);
   if (ref) {
-    _wzd_run_update_query(query, 2048, "DELETE FROM Stats WHERE ref=%d", ref);
-    _wzd_run_update_query(query, 2048, "DELETE FROM UserIP WHERE ref=%d", ref);
-    _wzd_run_update_query(query, 2048, "DELETE FROM UGR WHERE uref=%d", ref);
+    _wzd_run_update_query(query, 2048, "DELETE FROM stats WHERE ref=%d", ref);
+    _wzd_run_update_query(query, 2048, "DELETE FROM userip WHERE ref=%d", ref);
+    _wzd_run_update_query(query, 2048, "DELETE FROM ugr WHERE uref=%d", ref);
   }
   _wzd_run_update_query(query, 2048, "DELETE FROM users WHERE username='%s'", user->username);
   free(query);
